--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <!-- heder -->
 
     <header>
-      <section class="container section-flex heder-container heder-portfolio-border-one">
+      <section class="container section-flex heder-container heder-border-one">
         <nav class="heder-nav section-flex">
           <a class="logo-web logo-heder link" href="./index.html"
             >Web<span class="logo-studio">Studio</span></a
@@ -74,13 +74,10 @@
       <!-- section hero -->
 
       <section class="section hero-background">
-        <div class="container">
-          <ul class="list hero-list">
-            <li>
-              <h1 class="section-one-h1">Эффективные решения для вашего бизнеса</h1>
-            </li>
-            <li><button class="btn-one btn" type="button">Заказать услугу</button></li>
-          </ul>
+        <div class="container hero-center">
+          <h1 class="section-one-h1">Эффективные решения для вашего бизнеса</h1>
+
+          <button class="btn-one btn" type="button">Заказать услугу</button>
         </div>
       </section>
 
@@ -446,97 +443,85 @@
           <ul class="list clients-list card-set">
             <li class="clients-item card-set-item">
               <a
-                class="link"
+                class="link clients-link"
                 href=""
                 target="_blank"
                 rel="noopener noreferrer"
                 aria-label="number 1"
               >
-                <div class="clients-link">
-                  <svg class="clients-icon" width="106" height="60">
-                    <use href="./images/icons.svg#icon-logo-01"></use>
-                  </svg>
-                </div>
+                <svg class="clients-icon" width="106" height="60">
+                  <use href="./images/icons.svg#icon-logo-01"></use>
+                </svg>
               </a>
             </li>
 
             <li class="clients-item card-set-item">
               <a
-                class="link"
+                class="link clients-link"
                 href=""
                 target="_blank"
                 rel="noopener noreferrer"
                 aria-label="number 2"
               >
-                <div class="clients-link">
-                  <svg class="clients-icon" width="106" height="60">
-                    <use href="./images/icons.svg#icon-logo-02"></use>
-                  </svg>
-                </div>
+                <svg class="clients-icon" width="106" height="60">
+                  <use href="./images/icons.svg#icon-logo-02"></use>
+                </svg>
               </a>
             </li>
 
             <li class="clients-item card-set-item">
               <a
-                class="link"
+                class="link clients-link"
                 href=""
                 target="_blank"
                 rel="noopener noreferrer"
                 aria-label="number 3"
               >
-                <div class="clients-link">
-                  <svg class="clients-icon" width="106" height="60">
-                    <use href="./images/icons.svg#icon-logo-03"></use>
-                  </svg>
-                </div>
+                <svg class="clients-icon" width="106" height="60">
+                  <use href="./images/icons.svg#icon-logo-03"></use>
+                </svg>
               </a>
             </li>
 
             <li class="clients-item card-set-item">
               <a
-                class="link"
+                class="link clients-link"
                 href=""
                 target="_blank"
                 rel="noopener noreferrer"
                 aria-label="number 4"
               >
-                <div class="clients-link">
-                  <svg class="clients-icon" width="106" height="60">
-                    <use href="./images/icons.svg#icon-logo-04"></use>
-                  </svg>
-                </div>
+                <svg class="clients-icon" width="106" height="60">
+                  <use href="./images/icons.svg#icon-logo-04"></use>
+                </svg>
               </a>
             </li>
 
             <li class="clients-item card-set-item">
               <a
-                class="link"
+                class="link clients-link"
                 href=""
                 target="_blank"
                 rel="noopener noreferrer"
                 aria-label="number 5"
               >
-                <div class="clients-link">
-                  <svg class="clients-icon" width="106" height="60">
-                    <use href="./images/icons.svg#icon-logo-05"></use>
-                  </svg>
-                </div>
+                <svg class="clients-icon" width="106" height="60">
+                  <use href="./images/icons.svg#icon-logo-05"></use>
+                </svg>
               </a>
             </li>
 
             <li class="clients-item card-set-item">
               <a
-                class="link"
+                class="link clients-link"
                 href=""
                 target="_blank"
                 rel="noopener noreferrer"
                 aria-label="number 6"
               >
-                <div class="clients-link">
-                  <svg class="clients-icon" width="106" height="60">
-                    <use href="./images/icons.svg#icon-logo-06"></use>
-                  </svg>
-                </div>
+                <svg class="clients-icon" width="106" height="60">
+                  <use href="./images/icons.svg#icon-logo-06"></use>
+                </svg>
               </a>
             </li>
           </ul>
@@ -546,93 +531,91 @@
 
     <!-- footer -->
 
-    <footer>
-      <section class="footer-background section">
-        <div class="container section-flex">
-          <div class="footer-adress-contact">
-            <div class="footer-logo">
-              <a class="logo-web link" href="./index.html"
-                >Web<span class="footer-logo-studio">Studio</span></a
-              >
-            </div>
-
-            <ul class="list">
-              <li class="address-item">
-                <address>
-                  <a
-                    class="footer-address link"
-                    href="https://goo.gl/maps/yNYyYPv2zE2rzLxP9"
-                    target="_blank"
-                    rel="noopener noreferrer"
-                    >г. Киев, пр-т Леси Украинки, 26</a
-                  >
-                </address>
-              </li>
-              <li class="address-item">
-                <a class="footer-contact link" href="mailito:info@example.com">info@example.com</a>
-              </li>
-              <li class="address-item">
-                <a class="footer-contact link" href="tel:+380991111111">+38 099 111 11 11</a>
-              </li>
-            </ul>
+    <footer class="footer-background">
+      <div class="container section-flex footer-address-flex">
+        <div class="footer-adress-contact">
+          <div class="footer-logo">
+            <a class="logo-web link" href="./index.html"
+              >Web<span class="footer-logo-studio">Studio</span></a
+            >
           </div>
 
-          <div class="section-footer-media">
-            <h3 class="footer-h3">присоединяйтесь</h3>
-
-            <ul class="footer-media-list list">
-              <li class="footer-media-item">
+          <ul class="list">
+            <li class="address-item">
+              <address>
                 <a
-                  class="footer-media-link link"
-                  href=""
+                  class="footer-address link"
+                  href="https://goo.gl/maps/yNYyYPv2zE2rzLxP9"
                   target="_blank"
                   rel="noopener noreferrer"
-                  aria-label="instagram"
+                  >г. Киев, пр-т Леси Украинки, 26</a
                 >
-                  <svg class="footer-media-icon" width="20" height="20">
-                    <use href="./images/icons.svg#icon-instagram-01"></use></svg
-                ></a>
-              </li>
-              <li class="footer-media-item">
-                <a
-                  class="footer-media-link link"
-                  href=""
-                  target="_blank"
-                  rel="noopener noreferrer"
-                  aria-label="twitter"
-                >
-                  <svg class="footer-media-icon" width="20" height="20">
-                    <use href="./images/icons.svg#icon-twitter-02"></use></svg
-                ></a>
-              </li>
-              <li class="footer-media-item">
-                <a
-                  class="footer-media-link link"
-                  href=""
-                  target="_blank"
-                  rel="noopener noreferrer"
-                  aria-label="facebook"
-                >
-                  <svg class="footer-media-icon" width="20" height="20">
-                    <use href="./images/icons.svg#icon-facebook-03"></use></svg
-                ></a>
-              </li>
-              <li class="footer-media-item">
-                <a
-                  class="footer-media-link link"
-                  href=""
-                  target="_blank"
-                  rel="noopener noreferrer"
-                  aria-label="linkedin"
-                >
-                  <svg class="footer-media-icon" width="20" height="20">
-                    <use href="./images/icons.svg#icon-linkedin-04"></use></svg
-                ></a>
-              </li>
-            </ul>
-          </div>
+              </address>
+            </li>
+            <li class="address-item">
+              <a class="footer-contact link" href="mailito:info@example.com">info@example.com</a>
+            </li>
+            <li class="address-item">
+              <a class="footer-contact link" href="tel:+380991111111">+38 099 111 11 11</a>
+            </li>
+          </ul>
         </div>
-      </section>
+
+        <div class="footer-media">
+          <h3 class="footer-h3">присоединяйтесь</h3>
+
+          <ul class="footer-media-list list">
+            <li class="footer-media-item">
+              <a
+                class="footer-media-link link"
+                href=""
+                target="_blank"
+                rel="noopener noreferrer"
+                aria-label="instagram"
+              >
+                <svg class="footer-media-icon" width="20" height="20">
+                  <use href="./images/icons.svg#icon-instagram-01"></use></svg
+              ></a>
+            </li>
+            <li class="footer-media-item">
+              <a
+                class="footer-media-link link"
+                href=""
+                target="_blank"
+                rel="noopener noreferrer"
+                aria-label="twitter"
+              >
+                <svg class="footer-media-icon" width="20" height="20">
+                  <use href="./images/icons.svg#icon-twitter-02"></use></svg
+              ></a>
+            </li>
+            <li class="footer-media-item">
+              <a
+                class="footer-media-link link"
+                href=""
+                target="_blank"
+                rel="noopener noreferrer"
+                aria-label="facebook"
+              >
+                <svg class="footer-media-icon" width="20" height="20">
+                  <use href="./images/icons.svg#icon-facebook-03"></use></svg
+              ></a>
+            </li>
+            <li class="footer-media-item">
+              <a
+                class="footer-media-link link"
+                href=""
+                target="_blank"
+                rel="noopener noreferrer"
+                aria-label="linkedin"
+              >
+                <svg class="footer-media-icon" width="20" height="20">
+                  <use href="./images/icons.svg#icon-linkedin-04"></use></svg
+              ></a>
+            </li>
+          </ul>
+        </div>
+      </div>
     </footer>
   </body>
 </html>
