--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
     <!-- heder -->
 
     <header>
-      <section class="container section-flex heder-container heder-portfolio-border">
+      <section class="container section-flex heder-container heder-border-portfolio">
         <nav class="heder-nav section-flex">
           <a class="logo-web logo-heder link" href="./index.html"
             >Web<span class="logo-studio">Studio</span></a
