--- a/portfolio.html
+++ b/portfolio.html
@@ -85,14 +85,20 @@
           <ul class="list card-set">
             <li class="card-set-item">
               <a class="link card-border" href="">
-                <img
-                  class="portfolio-pic img"
-                  src="./images/hw-2-01.jpg"
-                  alt="Работающий ноутбук "
-                  width="370"
-                  height="294"
-                />
-
+                <div class="card-set-blur">
+                  <img
+                    class="portfolio-pic img"
+                    src="./images/hw-2-01.jpg"
+                    alt="Работающий ноутбук "
+                    width="370"
+                    height="294"
+                  />
+                  <p class="portfolio-dcrptn portfolio-overlay">
+                    Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                    сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
+                    или частном лице.
+                  </p>
+                </div>
                 <div class="portfolio-border">
                   <h2 class="portfolio-h2-style">Технокряк</h2>
                   <p class="pottfolio-p-style">Веб-сайт</p>
