--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
 
-  <body>
+  <body data-body>
     <!-- heder -->
 
     <header>
@@ -77,7 +77,9 @@
         <div class="container hero-center">
           <h1 class="section-one-h1">Эффективные решения для вашего бизнеса</h1>
 
-          <button class="btn-one btn" type="button">Заказать услугу</button>
+          <button data-modal-open class="btn-one btn" type="button" data-modal-open>
+            Заказать услугу
+          </button>
         </div>
       </section>
 
@@ -144,19 +146,27 @@
         <div class="container">
           <h2 class="section-one-h2 work-botoom">Чем мы занимаемся</h2>
           <ul class="list card-set">
-            <li class="card-set-item">
-              <img class="img" src="./images/hw1-1.jpg" alt="набор кода" width="370" height="294" />
-            </li>
-            <li class="card-set-item">
+            <li class="card-set-item wrk-pic-bckgrnd">
               <img
                 class="img"
+                src="./images/hw1-1.jpg"
+                alt="работа закомпьютером"
+                width="370"
+                height="294"
+              />
+              <p class="wrk-txt-bckgrnd">Десктопные приложения</p>
+            </li>
+            <li class="card-set-item wrk-pic-bckgrnd">
+              <img
+                class="img pic-work"
                 src="./images/hw1-2.jpg"
                 alt="работа на ноутбуке"
                 width="370"
                 height="294"
               />
+              <p class="wrk-txt-bckgrnd">Мобильные приложения</p>
             </li>
-            <li class="card-set-item">
+            <li class="card-set-item wrk-pic-bckgrnd">
               <img
                 class="img"
                 src="./images/hw1-3.jpg"
@@ -164,6 +174,7 @@
                 width="370"
                 height="294"
               />
+              <p class="wrk-txt-bckgrnd">Дизайнерские решения</p>
             </li>
           </ul>
         </div>
@@ -617,5 +628,18 @@
         </div>
       </div>
     </footer>
+
+    <!-- Window -->
+
+    <div data-modal class="backdrop is-hidden" data-modal>
+      <div class="modal">
+        <button data-modal-close class="modal-close-btn" type="button" data-modal-close>
+          <svg width="18" height="18">
+            <use href="./images/icons.svg#icon-close"></use>
+          </svg>
+        </button>
+      </div>
+    </div>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
