--- a/portfolio.html
+++ b/portfolio.html
@@ -93,16 +93,17 @@
                     width="370"
                     height="294"
                   />
-                  <p class="portfolio-dcrptn portfolio-overlay">
-                    Ресурс предлагает комплексные предложения с разным уровнем функционала и
-                    сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
-                    или частном лице.
-                  </p>
+                  <div class="portfolio-overlay">
+                    <p class="portfolio-dcrptn">
+                      Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                      сервисов. Все это позволит посетителю получить исчерпывающие сведения о
+                      компании или частном лице.
+                    </p>
+                  </div>
                 </div>
                 <div class="portfolio-border">
                   <h2 class="portfolio-h2-style">Технокряк</h2>
                   <p class="pottfolio-p-style">Веб-сайт</p>
-                  <span class="visually-hidden">Веб-сайты</span>
                 </div>
               </a>
             </li>
@@ -120,7 +121,6 @@
                 <div class="portfolio-border">
                   <h2 class="portfolio-h2-style">Постер New Orlean vs Golden Star</h2>
                   <p class="pottfolio-p-style">Дизайн</p>
-                  <span class="visually-hidden">Дизайн</span>
                 </div>
               </a>
             </li>
