--- a/index.html
+++ b/index.html
@@ -77,9 +77,7 @@
         <div class="container hero-center">
           <h1 class="section-one-h1">Эффективные решения для вашего бизнеса</h1>
 
-          <button data-modal-open class="btn-one btn" type="button" data-modal-open>
-            Заказать услугу
-          </button>
+          <button class="btn-one btn" type="button" data-modal-open>Заказать услугу</button>
         </div>
       </section>
 
@@ -631,9 +629,9 @@
 
     <!-- Window -->
 
-    <div data-modal class="backdrop is-hidden" data-modal>
+    <div class="backdrop is-hidden" data-modal>
       <div class="modal">
-        <button data-modal-close class="modal-close-btn" type="button" data-modal-close>
+        <button class="modal-close-btn" type="button" data-modal-close>
           <svg width="18" height="18">
             <use href="./images/icons.svg#icon-close"></use>
           </svg>
