--- a/index.html
+++ b/index.html
@@ -84,6 +84,8 @@
       <!-- section best  -->
 
       <section class="section">
+        <!--Особенности и преимущества -->
+
         <div class="container">
           <h2 class="visually-hidden">Особенности и преимущества</h2>
           <ul class="list best-list card-set">
@@ -138,47 +140,53 @@
         </div>
       </section>
 
-      <!-- section work  -->
+      <!-- Чем мы занимаемся  -->
 
       <section class="section section-top">
         <div class="container">
           <h2 class="section-one-h2 work-botoom">Чем мы занимаемся</h2>
           <ul class="list card-set">
-            <li class="card-set-item wrk-pic-bckgrnd">
-              <img
-                class="img"
-                src="./images/hw1-1.jpg"
-                alt="работа закомпьютером"
-                width="370"
-                height="294"
-              />
-              <p class="wrk-txt-bckgrnd">Десктопные приложения</p>
+            <li class="card-set-item">
+              <div class="wrk-pic-bckgrnd">
+                <img
+                  class="img"
+                  src="./images/hw1-1.jpg"
+                  alt="работа закомпьютером"
+                  width="370"
+                  height="294"
+                />
+                <p class="wrk-txt-bckgrnd">Десктопные приложения</p>
+              </div>
             </li>
-            <li class="card-set-item wrk-pic-bckgrnd">
-              <img
-                class="img pic-work"
-                src="./images/hw1-2.jpg"
-                alt="работа на ноутбуке"
-                width="370"
-                height="294"
-              />
-              <p class="wrk-txt-bckgrnd">Мобильные приложения</p>
+            <li class="card-set-item">
+              <div class="wrk-pic-bckgrnd">
+                <img
+                  class="img"
+                  src="./images/hw1-2.jpg"
+                  alt="работа на ноутбуке"
+                  width="370"
+                  height="294"
+                />
+                <p class="wrk-txt-bckgrnd">Мобильные приложения</p>
+              </div>
             </li>
-            <li class="card-set-item wrk-pic-bckgrnd">
-              <img
-                class="img"
-                src="./images/hw1-3.jpg"
-                alt="работа в приложении на планшете"
-                width="370"
-                height="294"
-              />
-              <p class="wrk-txt-bckgrnd">Дизайнерские решения</p>
+            <li class="card-set-item">
+              <div class="wrk-pic-bckgrnd">
+                <img
+                  class="img"
+                  src="./images/hw1-3.jpg"
+                  alt="работа в приложении на планшете"
+                  width="370"
+                  height="294"
+                />
+                <p class="wrk-txt-bckgrnd">Дизайнерские решения</p>
+              </div>
             </li>
           </ul>
         </div>
       </section>
 
-      <!-- section banda  -->
+      <!-- Наша команда  -->
 
       <section class="section banda-background section-top">
         <div class="container">
@@ -444,7 +452,7 @@
         </div>
       </section>
 
-      <!-- clients -->
+      <!-- Постоянные клиенты -->
 
       <section class="section">
         <div class="container">
